istio-exam/istio-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crypto-app
spec:
  hosts:
  - "ad71609250023476a877b474eb930f77-1265831154.eu-west-1.elb.amazonaws.com"
  gateways:
  - crypto-gateway
  http:
  - route:
    - destination:
        host: frontend-service
        port:
          number: 5002
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination
spec:
  host: frontend-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
